--- a/style.css
+++ b/style.css
@@ -62,9 +62,9 @@ html,body {
 }
 
 #center {
-    height: 90%;
+    height: 100%;
     width: 100%;
-    /* background-color: red; */
+    /* background-color: blue; */
     padding: 5vw;
     position: relative;
 }
@@ -82,7 +82,7 @@ html,body {
 }
 
 #overlay {
-    height: 45%;
+    height: 55%;
     width: 100%;
     position: absolute;
     bottom: 0;
@@ -94,7 +94,7 @@ html,body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 2vw;
+    margin-bottom: 1vw;
 }
 
 #cover1 h1 {
@@ -128,39 +128,55 @@ html,body {
   height: 3vw;  
 }
 
-#scroll {
-    height: 40vh;
-    width: 100%;
+.sliders {
+    /* height: 40vh;
+    width: 100%; */
     /* background-color: red; */
     /* padding: 1vw; */
+    /* white-space: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden; */
+    overflow: hidden;
+    padding: 100px 0;
     white-space: nowrap;
-    overflow-x: hidden;
-    overflow-y: hidden;
 }
 
-#container {
-    height: 100%;
-    width: 110%;
+.img-sliders {
+    /* /* height: 100%; */
+    /* width: 100%; */
     /* background-color: blueviolet; */
-    display: inline-block;
-    padding: 2vw;
-    animation-name: animation;
-    animation-duration: 10s;
+    /* display: inline-block;
+    padding: 1vw ;
+    animation-name: loop;
+    animation-duration: 0s;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    animation-timing-function: linear; */
+    white-space: nowrap;
+    animation: 35s slide infinite linear;
+    display: inline-block;
 }
 
-#scroll img {
+/* .slider:hover .img-sliders {
+    animation-play-state: paused;
+} */
+
+.img-sliders img {
     /* display: none; */
-    height: 95%;
+    /* height: 330px;
     border-radius: 50%;
-    width: 15%;
-    margin: 1.1vw;
+    width: 330px;
+    margin: 0 1vw;
+    object-fit: cover;
+    object-position: 30% 30%; */
+    height: 300px;
+    width: 300px;
+    margin: 0 45px;
+    border-radius: 50%;
     object-fit: cover;
     object-position: 30% 30%;
 }
 
-@keyframes animation {
+@keyframes slide {
     from {
         transform: translateX(0);
     }
@@ -168,6 +184,15 @@ html,body {
         transform: translateX(-100%);
     }
 }
+
+/* @keyframes loop {
+     from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    } */
+/* } */
 
 #alphabets {
     height: 11vh;
@@ -211,4 +236,19 @@ html,body {
 #page2 {
     height: 100%;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#page2-left {
+    height: 100%;
+    width: 40%;
+    background-image: url(https://images.unsplash.com/photo-1512646605205-78422b7c7896?q=80&w=1635&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) ;
+}
+
+#page2-right {
+    height: 100%;
+    width: 40%;
+    background-image: "";
 }
